--- a/MQ2Miku.vcxproj.filters
+++ b/MQ2Miku.vcxproj.filters
@@ -212,9 +212,6 @@
     <ClInclude Include="HealthCondition.h">
       <Filter>Source Files\Condition</Filter>
     </ClInclude>
-    <ClInclude Include="InRangeCondition.h">
-      <Filter>Source Files\Condition</Filter>
-    </ClInclude>
     <ClInclude Include="InvisibleCondition.h">
       <Filter>Source Files\Condition</Filter>
     </ClInclude>
@@ -431,9 +428,6 @@
     <ClInclude Include="BoolParameter.h">
       <Filter>Source Files\Workspace\Parameter</Filter>
     </ClInclude>
-    <ClInclude Include="RebuffCondition.h">
-      <Filter>Source Files\Condition</Filter>
-    </ClInclude>
     <ClInclude Include="DbAlternateAbilities.h">
       <Filter>Source Files\Workspace\StoredObject</Filter>
     </ClInclude>
@@ -457,6 +451,12 @@
     </ClInclude>
     <ClInclude Include="BlockedSpellsManager.h">
       <Filter>Source Files\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="TimerManager.h">
+      <Filter>Source Files\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="SpellBuffAction.h">
+      <Filter>Source Files\Ability\Sets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
