--- a/MQ2Miku.vcxproj.filters
+++ b/MQ2Miku.vcxproj.filters
@@ -25,20 +25,8 @@
     <Filter Include="Source Files\Util">
       <UniqueIdentifier>{9461dd25-6b62-473f-9130-c0f79de31634}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Ability\Sets">
-      <UniqueIdentifier>{fbef91e1-f950-4b59-a24d-2e74f18a794f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Behaviour">
-      <UniqueIdentifier>{274b7ad2-b0e4-42c6-bebd-0391cf663dac}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Behaviour\Movement">
-      <UniqueIdentifier>{2864db66-6783-40f5-8cdb-1acdc25c19ee}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Config">
       <UniqueIdentifier>{10aaf06a-3fe6-4a64-89c0-fdf34890ee8d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\BuffMonitor">
-      <UniqueIdentifier>{d0100ca6-a189-43b3-96c7-79e63c66b59d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\Encounter">
       <UniqueIdentifier>{0a9b15da-609a-42ab-8cf0-465d9dba9de6}</UniqueIdentifier>
@@ -67,18 +55,24 @@
     <Filter Include="Source Files\DatabaseUtil">
       <UniqueIdentifier>{d39338ec-c65d-4e14-b12e-f17b37d69844}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Ability\Actions">
+      <UniqueIdentifier>{fbef91e1-f950-4b59-a24d-2e74f18a794f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\MikuType">
+      <UniqueIdentifier>{a74d7e8d-5222-47c5-8306-ae6700115deb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MQ2Miku.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FollowBehaviour.cpp">
-      <Filter>Source Files\Behaviour\Movement</Filter>
-    </ClCompile>
     <ClCompile Include="DbConnection.h">
       <Filter>Source Files\Workspace</Filter>
     </ClCompile>
     <ClCompile Include="AlternateAbilitiesContext.h">
+      <Filter>Source Files\Workspace\Context</Filter>
+    </ClCompile>
+    <ClCompile Include="SpellSetContext.h">
       <Filter>Source Files\Workspace\Context</Filter>
     </ClCompile>
   </ItemGroup>
@@ -140,9 +134,6 @@
     <ClInclude Include="Condition.h">
       <Filter>Source Files\Condition</Filter>
     </ClInclude>
-    <ClInclude Include="SummonedItemAbility.h">
-      <Filter>Source Files\Ability</Filter>
-    </ClInclude>
     <ClInclude Include="RemoveAuraAbility.h">
       <Filter>Source Files\Ability</Filter>
     </ClInclude>
@@ -164,9 +155,6 @@
     <ClInclude Include="SpellAbility.h">
       <Filter>Source Files\Ability</Filter>
     </ClInclude>
-    <ClInclude Include="KillRogueDiscBurnAction.h">
-      <Filter>Source Files\Ability</Filter>
-    </ClInclude>
     <ClInclude Include="Utils.h">
       <Filter>Source Files\Util</Filter>
     </ClInclude>
@@ -183,28 +171,25 @@
       <Filter>Source Files\Condition</Filter>
     </ClInclude>
     <ClInclude Include="AbilityCollectionAbility.h">
-      <Filter>Source Files\Ability\Sets</Filter>
+      <Filter>Source Files\Ability\Actions</Filter>
     </ClInclude>
     <ClInclude Include="CastFirstAvailable.h">
-      <Filter>Source Files\Ability\Sets</Filter>
+      <Filter>Source Files\Ability\Actions</Filter>
     </ClInclude>
     <ClInclude Include="CastOnceSequence.h">
-      <Filter>Source Files\Ability\Sets</Filter>
+      <Filter>Source Files\Ability\Actions</Filter>
     </ClInclude>
     <ClInclude Include="SequenceAbilities.h">
-      <Filter>Source Files\Ability\Sets</Filter>
+      <Filter>Source Files\Ability\Actions</Filter>
     </ClInclude>
     <ClInclude Include="CommandAbility.h">
       <Filter>Source Files\Ability</Filter>
     </ClInclude>
     <ClInclude Include="BuffAbilities.h">
-      <Filter>Source Files\Ability\Sets</Filter>
+      <Filter>Source Files\Ability\Actions</Filter>
     </ClInclude>
-    <ClInclude Include="Behaviour.h">
-      <Filter>Source Files\Behaviour</Filter>
-    </ClInclude>
-    <ClInclude Include="TargetAbility.h">
-      <Filter>Source Files\Ability\Sets</Filter>
+    <ClInclude Include="TargetAction.h">
+      <Filter>Source Files\Ability\Actions</Filter>
     </ClInclude>
     <ClInclude Include="SpawnCondition.h">
       <Filter>Source Files\Condition</Filter>
@@ -239,14 +224,8 @@
     <ClInclude Include="Token.h">
       <Filter>Source Files\Config</Filter>
     </ClInclude>
-    <ClInclude Include="GameManager.h">
-      <Filter>Source Files\Manager</Filter>
-    </ClInclude>
     <ClInclude Include="ActionManager.h">
       <Filter>Source Files\Manager</Filter>
-    </ClInclude>
-    <ClInclude Include="Action.h">
-      <Filter>Source Files\Ability</Filter>
     </ClInclude>
     <ClInclude Include="ItemOnCursorCondition.h">
       <Filter>Source Files\Condition</Filter>
@@ -268,9 +247,6 @@
     </ClInclude>
     <ClInclude Include="DeadPlayerCondition.h">
       <Filter>Source Files\Condition</Filter>
-    </ClInclude>
-    <ClInclude Include="MissingBuff.h">
-      <Filter>Source Files\BuffMonitor</Filter>
     </ClInclude>
     <ClInclude Include="BuffCondition.h">
       <Filter>Source Files\Condition</Filter>
@@ -323,17 +299,11 @@
     <ClInclude Include="AuraCondition.h">
       <Filter>Source Files\Condition</Filter>
     </ClInclude>
-    <ClInclude Include="BuffMonitor.h">
-      <Filter>Source Files\Ability\Sets</Filter>
-    </ClInclude>
     <ClInclude Include="BuffStatusRequestCommand.h">
       <Filter>Source Files\Command</Filter>
     </ClInclude>
     <ClInclude Include="BuffStatusQueryCommand.h">
       <Filter>Source Files\Command</Filter>
-    </ClInclude>
-    <ClInclude Include="BuffMonitorManager.h">
-      <Filter>Source Files\Manager</Filter>
     </ClInclude>
     <ClInclude Include="BannedTargetCondition.h">
       <Filter>Source Files\Condition</Filter>
@@ -449,14 +419,53 @@
     <ClInclude Include="StringListQuery.h">
       <Filter>Source Files\Workspace\DbManager</Filter>
     </ClInclude>
-    <ClInclude Include="BlockedSpellsManager.h">
-      <Filter>Source Files\Manager</Filter>
-    </ClInclude>
     <ClInclude Include="TimerManager.h">
       <Filter>Source Files\Manager</Filter>
     </ClInclude>
     <ClInclude Include="SpellBuffAction.h">
-      <Filter>Source Files\Ability\Sets</Filter>
+      <Filter>Source Files\Ability\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockedSpellsManager.h">
+      <Filter>Source Files\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="MezzedCondition.h">
+      <Filter>Source Files\Condition</Filter>
+    </ClInclude>
+    <ClInclude Include="XTargetAction.h">
+      <Filter>Source Files\Ability\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="ScribeSetAction.h">
+      <Filter>Source Files\Ability\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="DbSpellSetLink.h">
+      <Filter>Source Files\Workspace\StoredObject</Filter>
+    </ClInclude>
+    <ClInclude Include="DemandActionManager.h">
+      <Filter>Source Files\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="AutoAttackCondition.h">
+      <Filter>Source Files\Condition</Filter>
+    </ClInclude>
+    <ClInclude Include="Action.h">
+      <Filter>Source Files\Ability\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="GuildContext.h">
+      <Filter>Source Files\Workspace\Context</Filter>
+    </ClInclude>
+    <ClInclude Include="GroupContext.h">
+      <Filter>Source Files\Workspace\Context</Filter>
+    </ClInclude>
+    <ClInclude Include="DbGroup.h">
+      <Filter>Source Files\Workspace\StoredObject</Filter>
+    </ClInclude>
+    <ClInclude Include="DbGuildMember.h">
+      <Filter>Source Files\Workspace\StoredObject</Filter>
+    </ClInclude>
+    <ClInclude Include="GuildManager.h">
+      <Filter>Source Files\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="MikuType.h">
+      <Filter>Source Files\MikuType</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
